tests/tldk/error/error-tldk-test1.pkt
0.000 socket(..., SOCK_STREAM, IPPROTO_TCP) = 3
0.000 fcntl(3, F_GETFL) = 0x2 (flags O_RDWR)
0.000 fcntl(3, F_SETFL, O_RDWR|O_NONBLOCK) = 0

// Establish connection and verify that there was no error.
0.100 connect(3, ..., ...) = -1 EINPROGRESS (Operation now in progress)
0.100 > S 0:0(0) <...>

+0.1 < S. 1:513(512) ack 1 win 19712 
+0.1 > . 1:1(0) ack 1
+0.1 write(3, ..., 1292) =  1292
+0 < . 5941:13563(7622) ack 1 win 4123 
+0.1 > . 1:1(0) ack 1
+0 < S 23001:26370(3369) win 31283 
+0.1 > R. 663089696:663093065(3369) ack 23001